@@ -28,5 +28,9 @@
 
       </span>
     </tal:condition>
-    <tal:subjectFilterWidget replace="structure view/render_subject_filter_widget" />
+    <tal:subjectFilter tal:define="widget view/render_subject_filter_widget" tal:condition="widget">
+        <span>|</span>
+        <span>Schlagworte</span>
+        <tal:subjectFilterWidget replace="structure widget" />
+    </tal:subjectFilter>
 </div>
