@@ -3986,8 +3986,10 @@ body.template-protocol #form-buttons-save { display: none; }
 #login-form .formControls input { margin-left: 0; font-size: 100%; }
 
 .tabbedview_view .tabbedview-tabs { position: relative; z-index: 2; }
-.tabbedview_view #tabbedview-body #selection_container .select2-container, .tabbedview_view #tabbedview-body #message_no_contents .select2-container { margin-left: 1em; }
-.tabbedview_view #tabbedview-body #selection_container .select2-container .select2-selection, .tabbedview_view #tabbedview-body #message_no_contents .select2-container .select2-selection { min-height: inherit; }
+.tabbedview_view #tabbedview-body #selection_container .select2-container, .tabbedview_view #tabbedview-body #message_no_contents .select2-container { margin-left: 1px; }
+.tabbedview_view #tabbedview-body #selection_container .select2-container.select2-container--default .select2-selection, .tabbedview_view #tabbedview-body #message_no_contents .select2-container.select2-container--default .select2-selection { border: 1px solid transparent; min-height: inherit; }
+.tabbedview_view #tabbedview-body #selection_container .select2-container.select2-container--default .select2-selection:hover, .tabbedview_view #tabbedview-body #message_no_contents .select2-container.select2-container--default .select2-selection:hover { border: 1px solid #aaa; }
+.tabbedview_view #tabbedview-body #selection_container .select2-container.select2-container--focus .select2-selection, .tabbedview_view #tabbedview-body #message_no_contents .select2-container.select2-container--focus .select2-selection { border: 1px solid #aaa; min-height: inherit; }
 .tabbedview_view #tabbedview-body #selection_container .select2-container li, .tabbedview_view #tabbedview-body #message_no_contents .select2-container li { margin-top: 0; margin-bottom: 0; }
 .tabbedview_view #tabbedview-body #selection_container .select2-container li.select2-selection__choice, .tabbedview_view #tabbedview-body #message_no_contents .select2-container li.select2-selection__choice { line-height: 1.4em; margin-top: 5px; }
 .tabbedview_view #tabbedview-body #message_no_contents .select2-selection--multiple .select2-search--inline:first-child { width: 100%; }
